--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
         <br>
         Select a Category:
             <select id="dietSelect" name="dietSelect" onchange="populateListProductChoices(this.id, 'displayProduct')">
+                <option value="None" selected>None</option>
                 <option value="Vegetarian">Vegetarian</option>
                 <option value="GlutenFree">Gluten-Free</option>
-                <option value="None" selected>None</option>
+                <option value="organic">Organic</option>
+                <option value="meats">Meats</option>
+                <option value="dairy">Dairy</option>
+                <option value="fruits">fruits</option>
             </select>
             <br><br>
     </div>
